  improved sndstatus() for Falcon. (THH)
- vdi/vdi_defs.h vdi/vdi_gdp.c vdi/vdi_line.c vdi/vdi_main.c: Static cleanup.
  Contributed by Eero Tamminen. (VRI)
- bios/kprintasm.S: Removed unused ASM glue for kprintf(). (VRI)
- bios/linea.S: Added DBG_LINEA. (VRI)
- bios/bios.c: Disabled DBGAUTOBOOT. (VRI)
- bios/acsi.c: Added DBG_ACSI. (VRI)
- bios/disk.c: Always test DBG_DISK before calling kprintf(). (VRI)
- aes/gemsuper.c: Always test DBG_GEMSUPER before calling kprintf(). (VRI)
- aes/gemgsxif.c: Added DBG_GEMGSXIF. (VRI)
- bios/blkdev.c: Always test DBG_BLKDEV before calling kprintf(). (VRI)
- bios/kprintf.c: Hide the cursor in panic(). (VRI)
- bios.linea.S: Cleaned up linea_stub. (VRI)
- bios.linea.S: Fail with panic on unimplemented Line A function. (VRI)

2013-03-27
- *: Static cleanup. Contributed by Eero Tamminen. (VRI)

2013-04-04
- cli/cmd.h cli/cmdasm.S cli/cmdedit.c cli/cmdexec.c cli/cmdint.c
  cli/cmdmain.c cli/cmdparse.c cli/cmdutil.c cli/Makefile: Added new
  (standalone) version of EmuCON. (RFB)

2013-04-07
- cli/cmdasm.S: Minor code cleanup. Thanks to Vincent Riviere. (RFB)
- cli/cmdexec.c: Formatting: change tabs to spaces, add GPL. (RFB)
- cli/cmdexec.c: Execute programs even if file extension is omitted. (RFB)

2013-04-13
- cli/cmdexec.c: Fix line endings. (RFB)
- cli/cmd.h cli/cmdedit.c: Add command completion. (RFB)

2013-04-14
- cli/cmdedit.c: Improve command completion. (RFB)

2013-04-18
- cli/cmd.h cli/cmdedit.c cli/cmdexec.c cli/cmdutil.c: Command
  completion for first word in line only includes executable
  programs. (RFB)

2013-04-22
- include/config.h include/kprint.h: Added KDEBUG(()) and KINFO(()). (VRI)
- bios/disk.c: Always display partition information with KINFO(()). (VRI)
- bios/bios.c: Added many KDEBUG(()) to track bios_init() progress. (VRI)

2013-04-24
- aes/*.c desk/*.c bios/delay.c bios/floppy.c: Make sure that each *.c file
  includes its own *.h to get proper prototype checking. Patch contributed
  by Eero Tamminen. (THH)